--- a/themes/custom/css/style.css
+++ b/themes/custom/css/style.css
@@ -1592,25 +1592,48 @@ address {
   overflow: hidden;
 }
 .conversation-block .conversation-bubble {
+  position: relative;
   clear: both;
   max-width: 70%;
-  margin-bottom: 20px;
+  margin: 10px 10px 20px 10px ;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
   border: 1px solid #aaa;
+  -webkit-box-shadow: 10px 10px 5px -4px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 5px -4px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 5px -4px rgba(0, 0, 0, 0.75);
+}
+.conversation-block .conversation-bubble .glyphicon-triangle-bottom {
+  position: absolute;
+  right: 10px;
+  bottom: -20px;
+  font-size: 26px;
+  display: block;
+  top: auto;
+  text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.75);
+}
+.conversation-block .conversation-bubble .glyphicon-triangle-bottom.right {
+  right: 10px;
+  left: auto;
+}
+.conversation-block .conversation-bubble .glyphicon-triangle-bottom.left {
+  right: auto;
+  left: 10px;
 }
 .conversation-block .conversation-bubble .bubble-author {
-  padding: 10px 10px 0px 10px;
+  padding: 10px 10px 10px 10px;
   float: left;
   width: 100%;
   color: #000;
   text-align: left;
   font-weight: 600;
+  font-size: 20px;
 }
 .conversation-block .conversation-bubble p {
   margin: 0;
   padding: 10px;
+  font-size: 18px;
 }
 .conversation-block .conversation-bubble.left {
   float: left;
