--- a/themes/custom/css/style.css
+++ b/themes/custom/css/style.css
@@ -743,7 +743,6 @@ img.right {
   position: relative;
 }
 .animation-layer.running {
-  padding: 0 15px;
   position: absolute;
 }
 /* ANIMATIONS
@@ -1936,6 +1935,52 @@ header {
     padding-top: 0;
     padding-bottom: 0;
   }
+}
+
+/*--------------------------- FONTS.LESS --------------------------------*/
+@font-face {
+  font-family: 'esphimerebold';
+  src: url('../assets/fonts/esphimere/esphimere_bold-webfont.woff2') format('woff2'), url('../assets/fonts/esphimere/esphimere_bold-webfont.woff') format('woff'), url('../assets/fonts/esphimere/esphimere_bold-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'esphimereextra_light';
+  src: url('../assets/fonts/esphimere/esphimere_extra_light-webfont.woff2') format('woff2'), url('../assets/fonts/esphimere/esphimere_extra_light-webfont.woff') format('woff'), url('../assets/fonts/esphimere/esphimere_extra_light-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'esphimerelight';
+  src: url('../assets/fonts/esphimere/esphimere_light-webfont.woff2') format('woff2'), url('../assets/fonts/esphimere/esphimere_light-webfont.woff') format('woff'), url('../assets/fonts/esphimere/esphimere_light-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'esphimeresemi_bold';
+  src: url('../assets/fonts/esphimere/esphimere_semi_bold-webfont.woff2') format('woff2'), url('../assets/fonts/esphimere/esphimere_semi_bold-webfont.woff') format('woff'), url('../assets/fonts/esphimere/esphimere_semi_bold-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'esphimerethin';
+  src: url('../assets/fonts/esphimere/esphimere_thin-webfont.woff2') format('woff2'), url('../assets/fonts/esphimere/esphimere_thin-webfont.woff') format('woff'), url('../assets/fonts/esphimere/esphimere_thin-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'esphimereregular';
+  src: url('../assets/fonts/esphimere/esphimere-webfont.woff2') format('woff2'), url('../assets/fonts/esphimere/esphimere-webfont.woff') format('woff'), url('../assets/fonts/esphimere/esphimere-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+/*--------------------------- CONFIG.LESS --------------------------------*/
+/*-----------------------------------------
+           BIRDS NEST.LESS
+-----------------------------------------*/
+.container .container {
+  margin: 0;
+  padding: 0;
 }
 
 /*--------------------------- FONTS.LESS --------------------------------*/
