--- a/themes/custom/less/_core/_transitions.less
+++ b/themes/custom/less/_core/_transitions.less
@@ -8,7 +8,7 @@
     position:relative;
 
     &.running {
-        padding:0 15px;
+        //padding:0 15px;
         position: absolute;
     }
 }
