--- a/mysite/css/admin.css
+++ b/mysite/css/admin.css
@@ -1,6 +1,3 @@
-
-
-
 .cms-warning-label {
 
 	padding:20px 10px;
@@ -9,4 +6,8 @@
 	text-align: center;
 	font-size:16px;
 	border:1px solid #991c1a;
+}
+
+#Root_Sections fieldset{
+	min-height:500px;
 }
