--- a/themes/custom/less/_core/_config.less
+++ b/themes/custom/less/_core/_config.less
@@ -14,7 +14,7 @@
 
 //------------------- GENERAL THEMES ---------------------//
 
-@alpha-color:#2F2F2F; 				//-- PURPLE --//
+@alpha-color:rgba(135,0,0,0.65); 				//-- PURPLE --//
 @beta-color:#22AFE6; 				//-- BLUE --//
 @gamma-color:#F7A823; 				//-- ORANGE --//
 @delta-color:#E94190;				//-- PINK --//
