--- a/themes/custom/css/style.css
+++ b/themes/custom/css/style.css
@@ -1590,7 +1590,7 @@ address {
 .audio-block .main-wrapper {
   overflow: hidden;
 }
-.audio-block .main-wrapper .question-wrapper .question {
+.audio-block .main-wrapper .question-wrapper .question * {
   text-align: center;
   color: #fff;
 }
@@ -1599,12 +1599,26 @@ address {
   position: relative;
   height: 500px;
 }
+@media only screen and (min-width: 769px) and (max-width: 991px), only screen and (min-width: 480px) and (max-width: 768px), only screen and (max-width: 479px) {
+  .audio-block .main-wrapper .bottom-wrapper {
+    height: auto;
+  }
+}
 .audio-block .main-wrapper .bottom-wrapper .avatar {
   height: 100%;
 }
 .audio-block .main-wrapper .bottom-wrapper .avatar img {
   height: 100%;
   width: auto;
+}
+@media only screen and (min-width: 769px) and (max-width: 991px), only screen and (min-width: 480px) and (max-width: 768px), only screen and (max-width: 479px) {
+  .audio-block .main-wrapper .bottom-wrapper .avatar {
+    height: auto;
+  }
+  .audio-block .main-wrapper .bottom-wrapper .avatar img {
+    height: auto;
+    width: 100%;
+  }
 }
 .audio-block .main-wrapper .bottom-wrapper .audio-section {
   position: relative;
@@ -1619,18 +1633,36 @@ address {
   width: 100%;
   bottom: 0;
 }
+@media only screen and (max-width: 479px) {
+  .audio-player {
+    height: 60px;
+  }
+}
 .audio-player .audio-panel {
   background-color: rgba(135, 0, 0, 0.65);
   padding: 10px;
   position: relative;
   overflow: visible;
-  height: 90px;
+  height: 100%;
 }
 .audio-player .audio-panel .controls {
   height: 100%;
 }
+@media only screen and (max-width: 479px) {
+  .audio-player .audio-panel .controls {
+    padding: 0 0px;
+  }
+  .audio-player .audio-panel .controls.middle {
+    padding: 0 10px;
+  }
+}
 .audio-player .audio-panel .controls .nav-controls {
   height: 40px;
+}
+@media only screen and (max-width: 479px) {
+  .audio-player .audio-panel .controls .nav-controls {
+    height: 20px;
+  }
 }
 .audio-player .audio-panel .controls .audio-block-track {
   margin-top: 10px;
@@ -1662,6 +1694,12 @@ address {
   display: none;
   cursor: pointer;
 }
+@media only screen and (max-width: 479px) {
+  .audio-player .audio-panel .audio-block-volume-meter {
+    width: 40px;
+    margin-right: 15px;
+  }
+}
 .audio-player .audio-panel .audio-block-volume-meter .audio-block-volume-track {
   background-color: #fff;
   height: 100%;
@@ -1674,6 +1712,13 @@ address {
   font-size: 60px;
   cursor: pointer;
   transition: ease all 0.5s;
+}
+@media only screen and (max-width: 479px) {
+  .audio-player .audio-panel .glyphicon {
+    width: 40px;
+    line-height: 40px;
+    font-size: 40px;
+  }
 }
 .track {
   position: relative;
